// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserSubmissionRow renders 1`] = `
<View>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ],
        ]
      }
      testID="user-submission-row.cell-1"
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
          testID="user-submission-row-icon-published-1.icon-img"
        >
          <View
            accessibilityLabel="Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../src/images/course/Assignment.png",
                }
              }
              style={
                Array [
                  false,
                  Object {
                    "minHeight": 24,
                    "minWidth": 24,
                  },
                ]
              }
              testID="access-icon-image"
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "bottom": -6,
                  "height": 16,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": -5,
                  "width": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/publish-small.png",
                  }
                }
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#00AC18",
                    "width": 12,
                  }
                }
                testID="access-icon-icon"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              },
              Object {
                "marginLeft": 12,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            learn to write code
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                    "paddingTop": 2,
                  },
                  Object {
                    "marginBottom": 8,
                  },
                  Object {
                    "color": "#07AF1F",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            Submitted
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "marginRight": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#f5f5f5",
                    "borderColor": "transparent",
                    "flex": 1,
                    "height": 18,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "height": 18,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <LinearGradient
                  colors={
                    Array [
                      "#008EE2",
                      "#00C1F3",
                    ]
                  }
                  end={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  start={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "flex": 0.8,
                      "height": 18,
                    }
                  }
                />
              </View>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#7F91A7",
                    "flex": 0,
                    "fontSize": 14,
                    "fontWeight": "500",
                    "minWidth": 67,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              8/10
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#00AC18",
        "bottom": 4,
        "left": 0,
        "position": "absolute",
        "top": 4,
        "width": 3,
      }
    }
  />
</View>
`;

exports[`UserSubmissionRow renders complete 1`] = `
<View>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ],
        ]
      }
      testID="user-submission-row.cell-1"
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
          testID="user-submission-row-icon-published-1.icon-img"
        >
          <View
            accessibilityLabel="Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../src/images/course/Assignment.png",
                }
              }
              style={
                Array [
                  false,
                  Object {
                    "minHeight": 24,
                    "minWidth": 24,
                  },
                ]
              }
              testID="access-icon-image"
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "bottom": -6,
                  "height": 16,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": -5,
                  "width": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/publish-small.png",
                  }
                }
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#00AC18",
                    "width": 12,
                  }
                }
                testID="access-icon-icon"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              },
              Object {
                "marginLeft": 12,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            learn to write code
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                    "paddingTop": 2,
                  },
                  Object {
                    "marginBottom": 8,
                  },
                  Object {
                    "color": "#07AF1F",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            Submitted
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "marginRight": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#f5f5f5",
                    "borderColor": "transparent",
                    "flex": 1,
                    "height": 18,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "height": 18,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <LinearGradient
                  colors={
                    Array [
                      "#008EE2",
                      "#00C1F3",
                    ]
                  }
                  end={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  start={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "flex": 1,
                      "height": 18,
                    }
                  }
                />
              </View>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#7F91A7",
                    "flex": 0,
                    "fontSize": 14,
                    "fontWeight": "500",
                    "minWidth": 67,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Complete
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#00AC18",
        "bottom": 4,
        "left": 0,
        "position": "absolute",
        "top": 4,
        "width": 3,
      }
    }
  />
</View>
`;

exports[`UserSubmissionRow renders discussion 1`] = `
<View>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ],
        ]
      }
      testID="user-submission-row.cell-1"
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
          testID="user-submission-row-icon-published-1.icon-img"
        >
          <View
            accessibilityLabel="Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../src/images/course/Discussions.png",
                }
              }
              style={
                Array [
                  false,
                  Object {
                    "minHeight": 24,
                    "minWidth": 24,
                  },
                ]
              }
              testID="access-icon-image"
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "bottom": -6,
                  "height": 16,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": -5,
                  "width": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/publish-small.png",
                  }
                }
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#00AC18",
                    "width": 12,
                  }
                }
                testID="access-icon-icon"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              },
              Object {
                "marginLeft": 12,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            learn to write code
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                    "paddingTop": 2,
                  },
                  Object {
                    "marginBottom": 8,
                  },
                  Object {
                    "color": "#07AF1F",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            Submitted
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "marginRight": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#f5f5f5",
                    "borderColor": "transparent",
                    "flex": 1,
                    "height": 18,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "height": 18,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <LinearGradient
                  colors={
                    Array [
                      "#008EE2",
                      "#00C1F3",
                    ]
                  }
                  end={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  start={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "flex": 0.8,
                      "height": 18,
                    }
                  }
                />
              </View>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#7F91A7",
                    "flex": 0,
                    "fontSize": 14,
                    "fontWeight": "500",
                    "minWidth": 67,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              8/10
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#00AC18",
        "bottom": 4,
        "left": 0,
        "position": "absolute",
        "top": 4,
        "width": 3,
      }
    }
  />
</View>
`;

exports[`UserSubmissionRow renders excused 1`] = `
<View>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ],
        ]
      }
      testID="user-submission-row.cell-1"
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
          testID="user-submission-row-icon-published-1.icon-img"
        >
          <View
            accessibilityLabel="Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../src/images/course/Assignment.png",
                }
              }
              style={
                Array [
                  false,
                  Object {
                    "minHeight": 24,
                    "minWidth": 24,
                  },
                ]
              }
              testID="access-icon-image"
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "bottom": -6,
                  "height": 16,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": -5,
                  "width": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/publish-small.png",
                  }
                }
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#00AC18",
                    "width": 12,
                  }
                }
                testID="access-icon-icon"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              },
              Object {
                "marginLeft": 12,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            learn to write code
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                    "paddingTop": 2,
                  },
                  Object {
                    "marginBottom": 8,
                  },
                  Object {
                    "color": "#8B969E",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            Excused
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#00AC18",
        "bottom": 4,
        "left": 0,
        "position": "absolute",
        "top": 4,
        "width": 3,
      }
    }
  />
</View>
`;

exports[`UserSubmissionRow renders incomplete 1`] = `
<View>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ],
        ]
      }
      testID="user-submission-row.cell-1"
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
          testID="user-submission-row-icon-published-1.icon-img"
        >
          <View
            accessibilityLabel="Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../src/images/course/Assignment.png",
                }
              }
              style={
                Array [
                  false,
                  Object {
                    "minHeight": 24,
                    "minWidth": 24,
                  },
                ]
              }
              testID="access-icon-image"
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "bottom": -6,
                  "height": 16,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": -5,
                  "width": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/publish-small.png",
                  }
                }
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#00AC18",
                    "width": 12,
                  }
                }
                testID="access-icon-icon"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              },
              Object {
                "marginLeft": 12,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            learn to write code
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                    "paddingTop": 2,
                  },
                  Object {
                    "marginBottom": 8,
                  },
                  Object {
                    "color": "#07AF1F",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            Submitted
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "marginRight": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#f5f5f5",
                    "borderColor": "transparent",
                    "flex": 1,
                    "height": 18,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "height": 18,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <LinearGradient
                  colors={
                    Array [
                      "#008EE2",
                      "#00C1F3",
                    ]
                  }
                  end={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  start={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "flex": 0,
                      "height": 18,
                    }
                  }
                />
              </View>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#7F91A7",
                    "flex": 0,
                    "fontSize": 14,
                    "fontWeight": "500",
                    "minWidth": 67,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Incomplete
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#00AC18",
        "bottom": 4,
        "left": 0,
        "position": "absolute",
        "top": 4,
        "width": 3,
      }
    }
  />
</View>
`;

exports[`UserSubmissionRow renders missing submittion types 1`] = `
<View>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ],
        ]
      }
      testID="user-submission-row.cell-1"
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
          testID="user-submission-row-icon-published-1.icon-img"
        >
          <View
            accessibilityLabel="Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../src/images/course/Assignment.png",
                }
              }
              style={
                Array [
                  false,
                  Object {
                    "minHeight": 24,
                    "minWidth": 24,
                  },
                ]
              }
              testID="access-icon-image"
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "bottom": -6,
                  "height": 16,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": -5,
                  "width": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/publish-small.png",
                  }
                }
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#00AC18",
                    "width": 12,
                  }
                }
                testID="access-icon-icon"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              },
              Object {
                "marginLeft": 12,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            learn to write code
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                    "paddingTop": 2,
                  },
                  Object {
                    "marginBottom": 8,
                  },
                  Object {
                    "color": "#07AF1F",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            Submitted
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "marginRight": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#f5f5f5",
                    "borderColor": "transparent",
                    "flex": 1,
                    "height": 18,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "height": 18,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <LinearGradient
                  colors={
                    Array [
                      "#008EE2",
                      "#00C1F3",
                    ]
                  }
                  end={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  start={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "flex": 0.8,
                      "height": 18,
                    }
                  }
                />
              </View>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#7F91A7",
                    "flex": 0,
                    "fontSize": 14,
                    "fontWeight": "500",
                    "minWidth": 67,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              8/10
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#00AC18",
        "bottom": 4,
        "left": 0,
        "position": "absolute",
        "top": 4,
        "width": 3,
      }
    }
  />
</View>
`;

exports[`UserSubmissionRow renders needs grading 1`] = `
<View>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ],
        ]
      }
      testID="user-submission-row.cell-1"
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
          testID="user-submission-row-icon-published-1.icon-img"
        >
          <View
            accessibilityLabel="Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../src/images/course/Assignment.png",
                }
              }
              style={
                Array [
                  false,
                  Object {
                    "minHeight": 24,
                    "minWidth": 24,
                  },
                ]
              }
              testID="access-icon-image"
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "bottom": -6,
                  "height": 16,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": -5,
                  "width": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/publish-small.png",
                  }
                }
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#00AC18",
                    "width": 12,
                  }
                }
                testID="access-icon-icon"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              },
              Object {
                "marginLeft": 12,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            learn to write code
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                    "paddingTop": 2,
                  },
                  Object {
                    "marginBottom": 8,
                  },
                  Object {
                    "color": "#07AF1F",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            Submitted
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              color="#FC5E13"
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "backgroundColor": "white",
                      "borderRadius": 9,
                      "borderWidth": 1,
                      "fontSize": 11,
                      "fontWeight": "500",
                      "overflow": "hidden",
                      "paddingBottom": 0,
                      "paddingLeft": 6,
                      "paddingRight": 6,
                      "paddingTop": 3,
                      "textAlign": "center",
                    },
                    Object {
                      "borderColor": "#FC5E13",
                      "color": "#FC5E13",
                    },
                    undefined,
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              NEEDS GRADING
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#00AC18",
        "bottom": 4,
        "left": 0,
        "position": "absolute",
        "top": 4,
        "width": 3,
      }
    }
  />
</View>
`;

exports[`UserSubmissionRow renders online quiz 1`] = `
<View>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ],
        ]
      }
      testID="user-submission-row.cell-1"
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
          testID="user-submission-row-icon-published-1.icon-img"
        >
          <View
            accessibilityLabel="Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../src/images/course/Quiz.png",
                }
              }
              style={
                Array [
                  false,
                  Object {
                    "minHeight": 24,
                    "minWidth": 24,
                  },
                ]
              }
              testID="access-icon-image"
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "bottom": -6,
                  "height": 16,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": -5,
                  "width": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/publish-small.png",
                  }
                }
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#00AC18",
                    "width": 12,
                  }
                }
                testID="access-icon-icon"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              },
              Object {
                "marginLeft": 12,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            learn to write code
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                    "paddingTop": 2,
                  },
                  Object {
                    "marginBottom": 8,
                  },
                  Object {
                    "color": "#07AF1F",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            Submitted
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "marginRight": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#f5f5f5",
                    "borderColor": "transparent",
                    "flex": 1,
                    "height": 18,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "height": 18,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <LinearGradient
                  colors={
                    Array [
                      "#008EE2",
                      "#00C1F3",
                    ]
                  }
                  end={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  start={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "flex": 0.8,
                      "height": 18,
                    }
                  }
                />
              </View>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#7F91A7",
                    "flex": 0,
                    "fontSize": 14,
                    "fontWeight": "500",
                    "minWidth": 67,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              8/10
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#00AC18",
        "bottom": 4,
        "left": 0,
        "position": "absolute",
        "top": 4,
        "width": 3,
      }
    }
  />
</View>
`;

exports[`UserSubmissionRow renders published 1`] = `
<View>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ],
        ]
      }
      testID="user-submission-row.cell-1"
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
          testID="user-submission-row-icon-published-1.icon-img"
        >
          <View
            accessibilityLabel="Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
              }
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "testUri": "../../../src/images/course/Assignment.png",
                }
              }
              style={
                Array [
                  false,
                  Object {
                    "minHeight": 24,
                    "minWidth": 24,
                  },
                ]
              }
              testID="access-icon-image"
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "bottom": -6,
                  "height": 16,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": -5,
                  "width": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../src/images/publish-small.png",
                  }
                }
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#00AC18",
                    "width": 12,
                  }
                }
                testID="access-icon-icon"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              },
              Object {
                "marginLeft": 12,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            learn to write code
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                    "paddingTop": 2,
                  },
                  Object {
                    "marginBottom": 8,
                  },
                  Object {
                    "color": "#07AF1F",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            Submitted
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "marginRight": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#f5f5f5",
                    "borderColor": "transparent",
                    "flex": 1,
                    "height": 18,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "height": 18,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <LinearGradient
                  colors={
                    Array [
                      "#008EE2",
                      "#00C1F3",
                    ]
                  }
                  end={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  start={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "flex": 0.8,
                      "height": 18,
                    }
                  }
                />
              </View>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#7F91A7",
                    "flex": 0,
                    "fontSize": 14,
                    "fontWeight": "500",
                    "minWidth": 67,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              8/10
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#00AC18",
        "bottom": 4,
        "left": 0,
        "position": "absolute",
        "top": 4,
        "width": 3,
      }
    }
  />
</View>
`;
